--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
     "start": "vite"
   },
   "dependencies": {
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
